feat 선호하는 팀 선택 기능 구현